--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -706,6 +706,19 @@
   timestamp = {2019.12.31},
 }
 
+@Article{Ahnert2012,
+  author    = {Ahnert, R.},
+  title     = {The Prison in Early Modern Drama},
+  journal   = {Literature Compass},
+  year      = {2012},
+  volume    = {9},
+  number    = {1},
+  pages     = {34-47},
+  doi       = {10.1111/j.1741-4113.2011.00860.x},
+  owner     = {Vincent},
+  timestamp = {2023.08.13},
+}
+
 @Article{Ahnert2015,
   author    = {Ahnert, R. and Ahnert, S. E.},
   title     = {Protestant Letter Networks in the Reign of Mary I: A Quantitative Approach},
@@ -2802,6 +2815,16 @@
   timestamp = {2019.04.01},
 }
 
+@Book{Bailey2013,
+  title     = {Of Bondage: Debt, Property, and Personhood in Early Modern England},
+  publisher = {University of Pennsylvania Press},
+  year      = {2013},
+  author    = {Bailey, A.},
+  owner     = {Vincent},
+  timestamp = {2023.08.13},
+  url       = {https://books.google.fr/books?id=KRAZmhQ5hKYC},
+}
+
 @Book{Bain1981,
   title     = {Masters, Servants, and Orders in Greek Tragedy: A Study of Some Aspects of Dramatic Technique and Convention},
   publisher = {Manchester University Press.},
@@ -3760,6 +3783,18 @@
   timestamp = {2023.08.09},
 }
 
+@InCollection{Basu2018a,
+  author    = {Basu, A. and Hope, J. and Witmore, M.},
+  title     = {The Professional and Linguistic Communities of Early Modern Dramatists},
+  booktitle = {Community-Making in Early Stuart Theatres},
+  publisher = {Routledge},
+  year      = {2018},
+  pages     = {63-94},
+  doi       = {10.4324/9781315573014-13},
+  owner     = {Vincent},
+  timestamp = {2023.08.13},
+}
+
 @Article{Basyouni2022,
   author    = {Basyouni, R. and Parkinson, C.},
   title     = {Mapping the social landscape: tracking patterns of interpersonal relationships},
@@ -4172,6 +4207,18 @@
   doi       = {10.1002/bs.3830100205},
   owner     = {Vincent},
   timestamp = {2019.04.05},
+}
+
+@Article{Beck1973,
+  author    = {Beck, E.},
+  title     = {Terence Improved: The Paradigm of the Prodigal Son in English Renaissance Comedy},
+  journal   = {Renaissance Drama},
+  year      = {1973},
+  volume    = {6},
+  pages     = {107-122},
+  owner     = {Vincent},
+  timestamp = {2023.08.13},
+  url       = {https://www.jstor.org/stable/41917110},
 }
 
 @Article{Beck2016,
@@ -8097,6 +8144,17 @@
   url       = {https://trove.nla.gov.au/work/20420962},
 }
 
+@InCollection{Butler1994,
+  author    = {Butler, M.},
+  title     = {A New Way to Pay Old Debts: Massinger's Grim Comedy},
+  booktitle = {English Comedy},
+  publisher = {Cambridge University Press},
+  year      = {1994},
+  owner     = {Vincent},
+  timestamp = {2023.08.13},
+  url       = {https://www.cambridge.org/vi/universitypress/subjects/literature/renaissance-and-early-modern-literature/english-comedy},
+}
+
 @InCollection{Butler2000,
   author    = {Butler, M.},
   title     = {Irish Culture and Scottish Enlightenment: Maria Edgeworth's Histories of the Future},
@@ -11242,6 +11300,16 @@
   timestamp = {2022.12.07},
 }
 
+@Book{Cormack2010,
+  title     = {A Power to Do Justice: Jurisdiction, English Literature, and the Rise of Common Law},
+  publisher = {University of Chicago Press},
+  year      = {2010},
+  author    = {Cormack, B.},
+  owner     = {Vincent},
+  timestamp = {2023.08.13},
+  url       = {https://press.uchicago.edu/ucp/books/book/chicago/P/bo5550091.html},
+}
+
 @InProceedings{Corman2013,
   author    = {Corman, S. R. and Ball, B. H. and Talboom, K. M. and Brewer, G. A.},
   title     = {Assessing two-mode semantic network story representations using a false memory paradigm},
@@ -12445,6 +12513,17 @@
   timestamp = {2022.08.31},
 }
 
+@PhdThesis{Davey2017,
+  author    = {Davey, D. N.},
+  title     = {Godly Prodigality: The Poetics of Excess in Reformation England},
+  school    = {University of California},
+  year      = {2017},
+  type      = {PhD Thesis},
+  owner     = {Vincent},
+  timestamp = {2023.08.13},
+  url       = {https://ihc.ucsb.edu/research-support/ihc-pre-doctoral-scholar-awards/},
+}
+
 @InCollection{David1996,
   author    = {David, A. and Kemp, R. and Smith, L. and Fahy, T.},
   title     = {Split minds: Multiple personality and schizophrenia},
@@ -12532,6 +12611,16 @@
   doi       = {10.1177/14761270030013002},
   owner     = {Vincent},
   timestamp = {2019.04.02},
+}
+
+@Book{Davis2020,
+  title     = {Imagining Inheritance from Chaucer to Shakespeare},
+  publisher = {Oxford University Press},
+  year      = {2020},
+  author    = {Davis, A.},
+  doi       = {10.1093/oso/9780198851424.001.0001},
+  owner     = {Vincent},
+  timestamp = {2023.08.13},
 }
 
 @InProceedings{Day2004,
@@ -13882,6 +13971,16 @@
   doi       = {10.1109/TMM.2010.2046265},
   owner     = {Vincent},
   timestamp = {2019.07.03},
+}
+
+@Book{Dowd2015,
+  title     = {The Dynamics of Inheritance on the Shakespearean Stage},
+  publisher = {Cambridge University Press},
+  year      = {2015},
+  author    = {Dowd, M. M.},
+  doi       = {10.1017/cbo9781316163184},
+  owner     = {Vincent},
+  timestamp = {2023.08.13},
 }
 
 @Article{Downham2005,
@@ -15244,6 +15343,16 @@
   doi       = {10.1002/andp.19163540702},
   owner     = {Vincent},
   timestamp = {2022.07.08},
+}
+
+@Book{EisamanMaus2013,
+  title     = {Being and Having in Shakespeare},
+  publisher = {Oxford University Press},
+  year      = {2013},
+  author    = {Eisaman Maus, K.},
+  owner     = {Vincent},
+  timestamp = {2023.08.13},
+  url       = {https://global.oup.com/academic/product/being-and-having-in-shakespeare-9780199698004},
 }
 
 @InProceedings{Eisenberg2017,
@@ -21480,6 +21589,16 @@
   timestamp = {2021.12.15},
 }
 
+@Book{Hainsworth1992,
+  title     = {Stewards, Lords and People: The Estate Steward and his World in later Stuart England},
+  publisher = {Cambridge University Press},
+  year      = {1992},
+  author    = {Hainsworth, D. R.},
+  owner     = {Vincent},
+  timestamp = {2023.08.13},
+  url       = {https://www.cambridge.org/vi/universitypress/subjects/history/british-history-after-1450/stewards-lords-and-people-estate-steward-and-his-world-later-stuart-england},
+}
+
 @MastersThesis{Hainsworth2022,
   author      = {Hainsworth, B.},
   title       = {Analysing the Textual Variance in Terry Pratchett's The Carpet People},
@@ -23825,6 +23944,29 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2014.06.24},
 }
 
+@Article{Horbury2017,
+  author    = {Horbury, E.},
+  title     = {Performing repentance: (in)sincerity in prodigal son drama and the Henry {IVs}},
+  journal   = {Renaissance Studies},
+  year      = {2017},
+  volume    = {32},
+  number    = {4},
+  pages     = {583-601},
+  doi       = {10.1111/rest.12350},
+  owner     = {Vincent},
+  timestamp = {2023.08.13},
+}
+
+@Book{Horbury2019,
+  title     = {Prodigality in Early Modern Drama},
+  publisher = {D.S. Brewer},
+  year      = {2019},
+  author    = {Horbury, E.},
+  owner     = {Vincent},
+  timestamp = {2023.08.13},
+  url       = {https://boydellandbrewer.com/9781843845423/prodigality-in-early-modern-drama/},
+}
+
 @InCollection{Horkheimer2017,
   author    = {Horkheimer, M. and Adorno, T. W.},
   title     = {The culture industry: Enlightenment as mass deception},
@@ -24016,6 +24158,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1006/jmla.2001.2798},
   owner     = {Vincent},
   timestamp = {2023.08.11},
+}
+
+@Book{Howard2008,
+  title     = {Theater of a City: The Places of London Comedy, 1598-1642},
+  publisher = {University of Pennsylvania Press},
+  year      = {2008},
+  author    = {Howard, J. E.},
+  owner     = {Vincent},
+  timestamp = {2023.08.13},
+  url       = {https://www.jstor.org/stable/j.ctt3fj0vk},
 }
 
 @Article{Howard2012,
@@ -24678,6 +24830,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2021.09.16},
   url       = {https://us.sagepub.com/en-us/nam/dimensions-of-human-behavior/book259362},
+}
+
+@Book{Hutson2007,
+  title     = {The Invention of Suspicion},
+  publisher = {Oxford University Press},
+  year      = {2007},
+  author    = {Hutson, L.},
+  doi       = {10.1093/acprof:oso/9780199212439.001.0001},
+  owner     = {Vincent},
+  timestamp = {2023.08.13},
 }
 
 @Article{Hutto2014,
@@ -31219,6 +31381,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1207/s15516709cog0504_1},
   owner     = {Vincent},
   timestamp = {2019.04.13},
+}
+
+@Book{Leinwand1999,
+  title     = {Theatre, Finance and Society in Early Modern England},
+  publisher = {Cambridge University Press},
+  year      = {1999},
+  author    = {Leinwand, T. B.},
+  doi       = {10.1017/cbo9780511483677},
+  owner     = {Vincent},
+  timestamp = {2023.08.13},
 }
 
 @Book{Lemche2008,
@@ -38402,6 +38574,39 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/TCSS.2018.2798699},
   owner     = {Vincent},
   timestamp = {2018.02.15},
+}
+
+@Book{Mukherji2006,
+  title     = {Law and Representation in Early Modern Drama},
+  publisher = {Cambridge University Press},
+  year      = {2006},
+  author    = {Mukherji, S.},
+  doi       = {10.1017/cbo9780511483813},
+  owner     = {Vincent},
+  timestamp = {2023.08.13},
+}
+
+@Article{Mukherji2009,
+  author    = {Mukherji, S.},
+  title     = {`Understood Relations': Law and Literature in Early Modern Studies},
+  journal   = {Literature Compass},
+  year      = {2009},
+  volume    = {6},
+  number    = {3},
+  pages     = {706-725},
+  doi       = {10.1111/j.1741-4113.2009.00628.x},
+  owner     = {Vincent},
+  timestamp = {2023.08.13},
+}
+
+@Book{Muldrew1998,
+  title     = {The Economy of Obligation},
+  publisher = {Palgrave Macmillan},
+  year      = {1998},
+  author    = {Muldrew, C.},
+  doi       = {10.1007/978-1-349-26879-5},
+  owner     = {Vincent},
+  timestamp = {2023.08.13},
 }
 
 @Article{Mulholland2009,
@@ -46420,6 +46625,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.06.24},
 }
 
+@Article{Ryner2014,
+  author    = {Ryner, B. D.},
+  title     = {The Cosmopolitical Economies of The Merchant of Venice and A New Way to Pay Old Debts},
+  journal   = {Renaissance Drama},
+  year      = {2014},
+  volume    = {42},
+  number    = {2},
+  pages     = {141-167},
+  doi       = {10.1086/678122},
+  owner     = {Vincent},
+  timestamp = {2023.08.13},
+}
+
 @Article{Rzepka2017,
   author    = {Rzepka, A. and Williams, P. and Royston, J.},
   title     = {The Social Network of Early English Drama: A Digital Humanities Lesson Plan},
@@ -48884,6 +49102,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/bf02288967},
   owner     = {Vincent},
   timestamp = {2022.06.22},
+}
+
+@Book{Shepard2015,
+  title     = {Accounting for Oneself},
+  publisher = {Oxford University Press},
+  year      = {2015},
+  author    = {Shepard, A.},
+  doi       = {10.1093/acprof:oso/9780199600793.001.0001},
+  owner     = {Vincent},
+  timestamp = {2023.08.13},
 }
 
 @InProceedings{Shervashidze2009,
@@ -56930,6 +57158,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2022.06.29},
 }
 
+@InCollection{Withington2017,
+  author    = {Withington, P.},
+  title     = {Urbanisation},
+  booktitle = {A Social History of England, 1500-1750},
+  publisher = {Cambridge University Press},
+  year      = {2017},
+  pages     = {174-198},
+  doi       = {10.1017/9781107300835.009},
+  owner     = {Vincent},
+  timestamp = {2023.08.13},
+}
+
 @Book{Wittgenstein1953,
   title     = {Philosophical Investigations},
   publisher = {Blackwell Publishing.},
@@ -58392,6 +58632,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.22733/JITAE.2020.10.01.002},
   owner     = {Vincent},
   timestamp = {2020.10.25},
+}
+
+@Book{Young1979,
+  title     = {The English Prodigal Son Plays: A Theatrical Fashion of the Sixteenth and Seventeenth Centuries},
+  publisher = {Universität Salzburg},
+  year      = {1979},
+  author    = {Young, A.},
+  owner     = {Vincent},
+  timestamp = {2023.08.13},
+  url       = {https://books.google.fr/books?id=5DtaAAAAMAAJ},
 }
 
 @Article{Young2001,
