--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -578,15 +578,15 @@
 }
 
 @MastersThesis{Aguirre2023,
-  author      = {Aguirre, P. A.},
-  title       = {From Shadow to Spotlight: Minoritarian Characters, Representative Failures, and High School Powerarchy in Teen Television},
-  year        = {2023},
-  type        = {BSc Thesis},
-  institution = {Bowdoin College},
-  owner       = {Vincent},
-  review      = {pdf available in 2028...},
-  timestamp   = {2023.05.23},
-  url         = {https://digitalcommons.bowdoin.edu/honorsprojects/389/},
+  author    = {Aguirre, P. A.},
+  title     = {From Shadow to Spotlight: Minoritarian Characters, Representative Failures, and High School Powerarchy in Teen Television},
+  school    = {Bowdoin College},
+  year      = {2023},
+  type      = {BSc Thesis},
+  owner     = {Vincent},
+  review    = {pdf available in 2028...},
+  timestamp = {2023.05.23},
+  url       = {https://digitalcommons.bowdoin.edu/honorsprojects/389/},
 }
 
 @Book{Aharoni2015,
@@ -1502,14 +1502,14 @@
 }
 
 @MastersThesis{Amalvy2020,
-  author      = {Amalvy, A.},
-  title       = {Natural Language Processing applied to Interactive Character Relationships Visualization in Novels},
-  year        = {2020},
-  type        = {MSc Thesis},
-  institution = {Université de technologie de Belfort Montbéliard / National Central University},
-  owner       = {Vincent},
-  timestamp   = {2021.03.16},
-  url         = {https://cloud.klmp200.net/index.php/s/f7YRqcW9oAwwLKd},
+  author    = {Amalvy, A.},
+  title     = {Natural Language Processing applied to Interactive Character Relationships Visualization in Novels},
+  school    = {Université de technologie de Belfort Montbéliard / National Central University},
+  year      = {2020},
+  type      = {MSc Thesis},
+  owner     = {Vincent},
+  timestamp = {2021.03.16},
+  url       = {https://cloud.klmp200.net/index.php/s/f7YRqcW9oAwwLKd},
 }
 
 @Article{Amancio2012,
@@ -5367,14 +5367,14 @@
 }
 
 @MastersThesis{Bipasha2019,
-  author      = {Bipasha, T. T.},
-  title       = {Extracting Social Network from Literary Prose},
-  year        = {2019},
-  type        = {MSc Thesis},
-  institution = {University of Arkansas},
-  owner       = {Vincent},
-  timestamp   = {2019.11.27},
-  url         = {https://scholarworks.uark.edu/etd/3415/},
+  author    = {Bipasha, T. T.},
+  title     = {Extracting Social Network from Literary Prose},
+  school    = {University of Arkansas},
+  year      = {2019},
+  type      = {MSc Thesis},
+  owner     = {Vincent},
+  timestamp = {2019.11.27},
+  url       = {https://scholarworks.uark.edu/etd/3415/},
 }
 
 @Article{Birant2007,
@@ -5746,14 +5746,14 @@
 }
 
 @MastersThesis{Bogucki2022,
-  author      = {Bogucki, W.},
-  title       = {Analysis of graphs of the interactions between the characters in movies and {TV} series},
-  year        = {2022},
-  type        = {MSc Thesis},
-  institution = {Warsaw University of Technology},
-  owner       = {Vincent},
-  timestamp   = {2022.10.15},
-  url         = {https://repo.pw.edu.pl/info/master/WUT842bdb73d578411fa1c8f01c1eee421e/},
+  author    = {Bogucki, W.},
+  title     = {Analysis of graphs of the interactions between the characters in movies and {TV} series},
+  school    = {Warsaw University of Technology},
+  year      = {2022},
+  type      = {MSc Thesis},
+  owner     = {Vincent},
+  timestamp = {2022.10.15},
+  url       = {https://repo.pw.edu.pl/info/master/WUT842bdb73d578411fa1c8f01c1eee421e/},
 }
 
 @Article{Boguna2004,
@@ -8291,6 +8291,7 @@
   title     = {Automatic detection of nominal entities in speech for enriched content search},
   booktitle = {26th International Florida Artificial Intelligence Research Society Conference},
   year      = {2013},
+  pages     = {190-195},
   owner     = {Vincent},
   timestamp = {2019.06.24},
   url       = {https://www.aaai.org/ocs/index.php/FLAIRS/FLAIRS13/paper/view/5862},
@@ -10322,14 +10323,14 @@
 }
 
 @MastersThesis{Chu2022a,
-  author      = {Chu , C. X.},
-  title       = {Knowledge Extraction from Fictional Texts},
-  year        = {2022},
-  type        = {Engineering Thesis},
-  institution = {Universität des Saarlandes},
-  owner       = {Vincent},
-  timestamp   = {2022.05.21},
-  url         = {https://publikationen.sulb.uni-saarland.de/bitstream/20.500.11880/32914/1/thesis-twoside-toprint.pdf},
+  author    = {Chu , C. X.},
+  title     = {Knowledge Extraction from Fictional Texts},
+  school    = {Universität des Saarlandes},
+  year      = {2022},
+  type      = {Engineering Thesis},
+  owner     = {Vincent},
+  timestamp = {2022.05.21},
+  url       = {https://publikationen.sulb.uni-saarland.de/bitstream/20.500.11880/32914/1/thesis-twoside-toprint.pdf},
 }
 
 @InProceedings{Chua2009,
@@ -14616,6 +14617,16 @@
   timestamp = {2020.11.17},
 }
 
+@Book{Duncan2006,
+  title     = {A Guide to Screenwriting Success: Writing for Film and Television.},
+  publisher = {Rowman \& Littlefield},
+  year      = {2006},
+  author    = {Duncan, S. V.},
+  owner     = {Vincent},
+  timestamp = {2023.08.13},
+  url       = {https://books.google.fr/books?id=gcvjl_HvMrMC},
+}
+
 @Book{Dundes1984,
   title     = {Sacred narrative: Readings in the theory of myth},
   publisher = {University of California Press},
@@ -15008,6 +15019,19 @@
   timestamp = {2019.04.03},
 }
 
+@Article{Eck2010,
+  author    = {van Eck, N. J. and Waltman, L. and Noyons, E. C. M. and Buter, R. K.},
+  title     = {Automatic term identification for bibliometric mapping},
+  journal   = {Scientometrics},
+  year      = {2010},
+  volume    = {82},
+  number    = {3},
+  pages     = {581-596},
+  doi       = {10.1007/s11192-010-0173-0},
+  owner     = {Vincent},
+  timestamp = {2023.08.13},
+}
+
 @InCollection{Edel2001,
   author    = {Edel, D.},
   title     = {Myth Versus Reality: Queen Medb of Connacht and her Critics, Ancient and Modern},
@@ -15127,14 +15151,14 @@
 }
 
 @MastersThesis{Edwards2019,
-  author      = {Edwards, M.},
-  title       = {The One with the Social Network Analysis: the extraction, analysis and modelling of temporal social networks from narratives},
-  year        = {2019},
-  type        = {MSc Thesis},
-  institution = {University of Adelaide, Faculty of Engineering, Computer and Mathematical Sciences, School of Mathematical Sciences},
-  owner       = {Vincent},
-  timestamp   = {2019.08.30},
-  url         = {https://digital.library.adelaide.edu.au/dspace/bitstream/2440/120687/1/Edwards2019_MPhil.pdf},
+  author    = {Edwards, M.},
+  title     = {The One with the Social Network Analysis: the extraction, analysis and modelling of temporal social networks from narratives},
+  school    = {University of Adelaide, Faculty of Engineering, Computer and Mathematical Sciences, School of Mathematical Sciences},
+  year      = {2019},
+  type      = {MSc Thesis},
+  owner     = {Vincent},
+  timestamp = {2019.08.30},
+  url       = {https://digital.library.adelaide.edu.au/dspace/bitstream/2440/120687/1/Edwards2019_MPhil.pdf},
 }
 
 @Article{Efron1979,
@@ -17831,6 +17855,19 @@
   url       = {https://www.jstor.org/stable/20466079},
 }
 
+@Article{Frantzi2000,
+  author    = {Frantzi, K. and Ananiadou, S. and Mima, H.},
+  title     = {Automatic recognition of multi-word terms:. the {C}-value/{NC}-value method},
+  journal   = {International Journal on Digital Libraries},
+  year      = {2000},
+  volume    = {3},
+  number    = {2},
+  pages     = {115-130},
+  doi       = {10.1007/s007999900023},
+  owner     = {Vincent},
+  timestamp = {2023.08.13},
+}
+
 @Article{Franzosi1987,
   author    = {Franzosi, R.},
   title     = {The Press as a Source of Socio-Historical Data: Issues in the Methodology of Data Collection from Newspapers},
@@ -17960,6 +17997,16 @@
   doi       = {10.1037/a0022327},
   owner     = {Vincent},
   timestamp = {2023.08.11},
+}
+
+@Book{Freeman2016,
+  title     = {Historicising Transmedia Storytelling: Early Twentieth-Century Transmedia Story Worlds},
+  publisher = {Routledge},
+  year      = {2016},
+  author    = {Freeman, M.},
+  owner     = {Vincent},
+  timestamp = {2023.08.13},
+  url       = {https://www.routledge.com/Historicising-Transmedia-Storytelling-Early-Twentieth-Century-Transmedia/Freeman/p/book/9780367884710},
 }
 
 @Article{Freeman2018,
@@ -21600,14 +21647,14 @@
 }
 
 @MastersThesis{Hainsworth2022,
-  author      = {Hainsworth, B.},
-  title       = {Analysing the Textual Variance in Terry Pratchett's The Carpet People},
-  year        = {2022},
-  type        = {MPhil},
-  institution = {Trinity College},
-  owner       = {Vincent},
-  timestamp   = {2022.09.20},
-  url         = {http://www.tara.tcd.ie/handle/2262/101163},
+  author    = {Hainsworth, B.},
+  title     = {Analysing the Textual Variance in Terry Pratchett's The Carpet People},
+  school    = {Trinity College},
+  year      = {2022},
+  type      = {MPhil},
+  owner     = {Vincent},
+  timestamp = {2022.09.20},
+  url       = {http://www.tara.tcd.ie/handle/2262/101163},
 }
 
 @Article{Hakimi1992,
@@ -21845,6 +21892,16 @@
   doi       = {10.1016/C2009-0-61819-5},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+}
+
+@Book{Han2012,
+  title     = {Data Mining: Concepts and Techniques},
+  publisher = {Elsevier},
+  year      = {2012},
+  author    = {Han, J. and Kamber, M. and Pei, J.},
+  doi       = {10.1016/c2009-0-61819-5},
+  owner     = {Vincent},
+  timestamp = {2023.08.13},
 }
 
 @PhdThesis{Han2014,
@@ -22592,14 +22649,14 @@
 }
 
 @MastersThesis{He2011b,
-  author      = {He, H.},
-  title       = {Automatic speaker identification in novels},
-  year        = {2011},
-  type        = {MSc Thesis},
-  institution = {University of Alberta},
-  owner       = {Vincent},
-  timestamp   = {2019.01.18},
-  url         = {https://era.library.ualberta.ca/items/b984802a-016b-4cd6-9647-ef0d66ba6d1c},
+  author    = {He, H.},
+  title     = {Automatic speaker identification in novels},
+  school    = {University of Alberta},
+  year      = {2011},
+  type      = {MSc Thesis},
+  owner     = {Vincent},
+  timestamp = {2019.01.18},
+  url       = {https://era.library.ualberta.ca/items/b984802a-016b-4cd6-9647-ef0d66ba6d1c},
 }
 
 @InProceedings{He2013a,
@@ -26331,14 +26388,14 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @MastersThesis{Jorgensen2022,
-  author      = {Jorgensen, K.},
-  title       = {Utilizing Natural Language Processing to Produce and Present Film: An Exploratory Analysis},
-  year        = {2022},
-  type        = {MSc Thesis},
-  institution = {University of Calgary},
-  owner       = {Vincent},
-  timestamp   = {2023.04.13},
-  url         = {http://hdl.handle.net/1880/115664},
+  author    = {Jorgensen, K.},
+  title     = {Utilizing Natural Language Processing to Produce and Present Film: An Exploratory Analysis},
+  school    = {University of Calgary},
+  year      = {2022},
+  type      = {MSc Thesis},
+  owner     = {Vincent},
+  timestamp = {2023.04.13},
+  url       = {http://hdl.handle.net/1880/115664},
 }
 
 @InProceedings{Joseph2017,
@@ -29406,6 +29463,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://dev.clariah.nl/files/dh2019/boa/0843.html},
 }
 
+@InProceedings{Kubis2020,
+  author    = {Kubis, M.},
+  title     = {Geometric Deep Learning Models for Linking Character Names in Novels},
+  booktitle = {4th Joint SIGHUM Workshop on Computational Linguistics for Cultural Heritage, Social Sciences, Humanities and Literature},
+  year      = {2020},
+  pages     = {127-132},
+  owner     = {Vincent},
+  timestamp = {2023.08.13},
+  url       = {https://aclanthology.org/2020.latechclfl-1.15},
+}
+
 @Article{Kubis2021,
   author    = {Kubis, M. and Mickiewicz, A.},
   title     = {Quantitative analysis of character networks in Polish 19th- and 20th-century novels},
@@ -30057,14 +30125,14 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @MastersThesis{Lajewska2021,
-  author      = {Łajewska , W.},
-  title       = {Preparation of Sets and Machine Learning Models for Recognizing Names of Literary Characters},
-  year        = {2021},
-  type        = {MSc Thesis},
-  institution = {Warsaw University of Technology},
-  owner       = {Vincent},
-  timestamp   = {2023.06.27},
-  url         = {https://werlaj.github.io/files/mgr.pdf},
+  author    = {Łajewska , W.},
+  title     = {Preparation of Sets and Machine Learning Models for Recognizing Names of Literary Characters},
+  school    = {Warsaw University of Technology},
+  year      = {2021},
+  type      = {MSc Thesis},
+  owner     = {Vincent},
+  timestamp = {2023.06.27},
+  url       = {https://werlaj.github.io/files/mgr.pdf},
 }
 
 @Article{Lakey2009,
@@ -31532,14 +31600,14 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @MastersThesis{Lesser2014,
-  author      = {Lesser, Josh},
-  title       = {Get yourself connected: time, space, and character networks in David Mitchell's fiction},
-  year        = {2014},
-  type        = {M. Arts Thesis},
-  institution = {DePaul University, College of Liberal Arts \& Social Sciences},
-  owner       = {Vincent},
-  timestamp   = {2021.02.03},
-  url         = {https://via.library.depaul.edu/etd/173/},
+  author    = {Lesser, Josh},
+  title     = {Get yourself connected: time, space, and character networks in David Mitchell's fiction},
+  school    = {DePaul University, College of Liberal Arts \& Social Sciences},
+  year      = {2014},
+  type      = {M. Arts Thesis},
+  owner     = {Vincent},
+  timestamp = {2021.02.03},
+  url       = {https://via.library.depaul.edu/etd/173/},
 }
 
 @Book{Lessing1984,
@@ -41906,6 +41974,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://aclanthology.org/W17-7555/},
 }
 
+@InProceedings{Paul2017b,
+  author    = {Paul, A. and Das, D.},
+  title     = {Identification of Character Adjectives from Mahabharata},
+  booktitle = {Recent Advances in Natural Language Processing Meet Deep Learning},
+  year      = {2017},
+  pages     = {569-576},
+  doi       = {10.26615/978-954-452-049-6_074},
+  owner     = {Vincent},
+  timestamp = {2023.08.13},
+}
+
 @InProceedings{Paulus2017,
   author    = {Paulus, Romain and Xiong, Caiming and Socher, Richard},
   title     = {A Deep Reinforced Model for Abstractive Summarization},
@@ -42822,6 +42901,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.07.24},
   url       = {https://www.bloomsbury.com/us/toward-a-modernist-style-john-dos-passos-9781623564896},
+}
+
+@InProceedings{Pizzolli2019,
+  author    = {Pizzolli, D. and Strapparava, C.},
+  title     = {Personality Traits Recognition in Literary Texts},
+  booktitle = {2nd Workshop on Storytelling},
+  year      = {2019},
+  pages     = {107-111},
+  doi       = {10.18653/v1/w19-3411},
+  owner     = {Vincent},
+  timestamp = {2023.08.13},
 }
 
 @InCollection{Pizzorno1991,
@@ -49319,13 +49409,13 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @MastersThesis{Shukla2018,
-  author      = {Shukla, M.},
-  title       = {Theatrical Genre Prediction Using Social Network Metrics},
-  year        = {2018},
-  institution = {University of Arkansas},
-  owner       = {Vincent},
-  timestamp   = {2020.01.01},
-  url         = {https://scholarworks.uark.edu/etd/2920/},
+  author    = {Shukla, M.},
+  title     = {Theatrical Genre Prediction Using Social Network Metrics},
+  school    = {University of Arkansas},
+  year      = {2018},
+  owner     = {Vincent},
+  timestamp = {2020.01.01},
+  url       = {https://scholarworks.uark.edu/etd/2920/},
 }
 
 @InProceedings{Shukla2018a,
@@ -54490,6 +54580,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://pdfs.semanticscholar.org/b755/1e222321cca2fdb1992991c434ef0aa1a2fd.pdf},
 }
 
+@InProceedings{Valls-Vargas2015,
+  author    = {Valls-Vargas, J. and Zhu, J. and Ontañón, S.},
+  title     = {Narrative hermeneutic circle: improving character role identification from natural language text via feedback loops},
+  booktitle = {24th International Conference on Artificial Intelligence},
+  year      = {2015},
+  pages     = {2517-2523},
+  owner     = {Vincent},
+  timestamp = {2023.08.13},
+  url       = {https://www.ijcai.org/Abstract/15/357},
+}
+
 @InProceedings{VanCranenburgh2023,
   author    = {van Cranenburgh, A. and van den Berg, F.},
   title     = {Direct Speech Quote Attribution for Dutch Literature},
@@ -58234,6 +58335,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1609/aaai.v36i11.21709},
   owner     = {Vincent},
   timestamp = {2023.08.11},
+}
+
+@MastersThesis{Yang2022p,
+  author    = {Yang, F.},
+  title     = {An Extraction and Representation Pipeline for Literary Characters},
+  school    = {Wellesley College},
+  year      = {2022},
+  type      = {Academic Thesis},
+  owner     = {Vincent},
+  timestamp = {2023.08.13},
+  url       = {https://repository.wellesley.edu/object/ir1788},
 }
 
 @Article{Yao2019,
