--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -17161,6 +17161,16 @@
   url       = {https://nyuscholars.nyu.edu/en/publications/networks-and-places},
 }
 
+@InProceedings{Fischer2015,
+  author    = {Fischer, F. and Strötgen, J.},
+  title     = {When Does German Literature Take Place? – On the Analysis of Temporal Expressions in Large Corpora},
+  booktitle = {Annual Conference of the Alliance of Digital Humanities Organizations},
+  year      = {2015},
+  owner     = {Vincent},
+  timestamp = {2023.08.13},
+  url       = {https://dbs.ifi.uni-heidelberg.de/files/Team/jannik/publications/fischer-stroetgen_temporal-expressions-in-literary-corpora_dh2015_final_2015-03-01.pdf},
+}
+
 @InProceedings{Fischer2015a,
   author    = {Fischer, F. and Göbel, M. and Kampkaspar, D. and Trilcke, P.},
   title     = {Digital Network Analysis of Dramatic Texts},
@@ -29549,6 +29559,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1002/nav.3800020109},
   owner     = {Vincent},
   timestamp = {2019.04.13},
+}
+
+@Article{Kuhn2008,
+  author    = {Kuhn, M.},
+  title     = {Building Predictive Models in {R} Using the caret Package},
+  journal   = {Journal of Statistical Software},
+  year      = {2008},
+  volume    = {28},
+  number    = {5},
+  pages     = {1-26},
+  doi       = {10.18637/jss.v028.i05},
+  owner     = {Vincent},
+  timestamp = {2023.08.13},
 }
 
 @Article{Kujawski2011,
@@ -42546,6 +42569,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/s10588-012-9122-1},
   owner     = {Vincent},
   timestamp = {2020.07.23},
+}
+
+@Book{Pfister1988,
+  title     = {The Theory and Analysis of Drama},
+  publisher = {Cambridge University Press},
+  year      = {1988},
+  author    = {Pfister, M.},
+  series    = {European Studies in English Literature},
+  doi       = {10.1017/cbo9780511553998},
+  owner     = {Vincent},
+  timestamp = {2023.08.13},
 }
 
 @Article{Pham2005,
